6월8일 수업끝

--- a/6월8일/1교시+2교시.ipynb
+++ b/6월8일/1교시+2교시.ipynb
@@ -419,25 +419,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[['led', 'on'], ['motor', 'off'], ['switch', 'off']]\n",
+      "{'led': 'on', 'motor': 'off', 'switch': 'off'}\n"
      ]
     }
    ],
    "source": [
     "def query_parse(txt):\n",
     "    items = txt.split(\"&\")\n",
+    "    print(items)\n",
     "    temp = []\n",
     "    for item in items:\n",
     "        temp.append(item.split(\"=\"))\n",
     "    \n",
-    "    #print(temp)    \n",
+    "    print(temp)    \n",
     "    \n",
     "    # for i in range(len(temp)):\n",
     "    #     if len(temp[i]) == 1:\n",
