--- a/6월8일/4교시.ipynb
+++ b/6월8일/4교시.ipynb
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "#사용자 정의 모듈\n",
     "def add(a, b):\n",
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +64,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#사용자 정의 모듈 문제. mymath.py 파일 봐봥\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#이게 main.py얌. 그렇게 할거야 내가 그렇게 하기로 했어\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmymath\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[39mprint\u001b[39m(mymath\u001b[39m.\u001b[39;49madd(\u001b[39m4\u001b[39m,\u001b[39m3\u001b[39m))\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(mymath\u001b[39m.\u001b[39msubtract(x,y))\n",
+      "Cell \u001b[1;32mIn[25], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m      7\u001b[0m y \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m\n\u001b[1;32m----> 9\u001b[0m \u001b[39mprint\u001b[39m(mymath\u001b[39m.\u001b[39;49madd(x,y))\n\u001b[0;32m     10\u001b[0m \u001b[39mprint\u001b[39m(mymath\u001b[39m.\u001b[39msubtract(x,y))\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'mymath' has no attribute 'add'"
      ]
     }
