--- a/6월9일/1교시.ipynb
+++ b/6월9일/1교시.ipynb
@@ -569,17 +569,75 @@
     "#연습문제\n",
     "#data = {\"Sun\": 0, \"Mon\": 1, \"Tue\": 2, \"Wed\": 3, \"Thu\": 4, \"Fri\": 5, \"Sat\": 6} 이 주어질 때 \n",
     "# try-except문을 이용하여 다음과 같이 동작하는 프로그램을 작성하라.\n",
+    "# 딕셔너리 ppt 참고\n",
     "\n",
     "data = {\"Sun\": 0, \"Mon\": 1, \"Tue\": 2, \"Wed\": 3, \"Thu\": 4, \"Fri\": 5, \"Sat\": 6}\n",
     "\n",
-    "try:\n",
-    "    user_input = input(\"숫자를 입력하세요\")\n",
+    "while True:\n",
+    "    try:\n",
+    "        user_input = input(\"요일을 입력하세요\")    \n",
+    "        value = data[user_input]\n",
+    "        print(value)\n",
+    "        \n",
+    "    except KeyError:\n",
+    "        print(\"항목이 없습니다\")    \n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "항목이 없습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "#위랑 똑같은거\n",
+    "data = {\"Sun\": 0, \"Mon\": 1, \"Tue\": 2, \"Wed\": 3, \"Thu\": 4, \"Fri\": 5, \"Sat\": 6}\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"요일을 입력하세요\") \n",
+    "    value = data.get(user_input)\n",
     "    \n",
-    "    value = data[user_input]\n",
-    "    print(value)\n",
-    "    \n",
-    "except KeyError:\n",
-    "    print(\"항목이 없습니다\")    \n"
+    "    if value is not None:   #Sun 했을때 0이 반환이 되니까 그냥 value까지만 하면 에러. [],{}, 0, none = false다.\n",
+    "        print(value)\n",
+    "    else:\n",
+    "        print(\"항목이 없습니다\")    \n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "항목이 없습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "#위랑 똑같은거\n",
+    "data = {\"Sun\": 0, \"Mon\": 1, \"Tue\": 2, \"Wed\": 3, \"Thu\": 4, \"Fri\": 5, \"Sat\": 6}\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"요일을 입력하세요\")\n",
+    "    value = data.get(user_input)\n",
+    "    if user_input in data:        #in을 이용해서 딕셔너리 돌아보기\n",
+    "        print(value)\n",
+    "    else:\n",
+    "        print(\"항목이 없습니다\")    \n",
+    "        break"
    ]
   }
  ],
