--- a/6월9일/2교시.ipynb
+++ b/6월9일/2교시.ipynb
@@ -220,6 +220,306 @@
     "리터럴과 메타로 구성되어있다  \n",
     "a가 리터럴, +가 메타  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "매칭된 문자열: python\n",
+      "매칭되지 않음\n",
+      "매칭되지 않음\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 문자열의 시작부터 정규표현식과 매칭되는 패턴 찾기\n",
+    "pattern = r\"python\" #r은 정규표현식을 쓸때 사용한다. 원시(raw)문자열 임을 뜻함.\n",
+    "string1 = \"python is easy\" #제일 앞에 있으니 찾는다\n",
+    "string2 = \"I love python\" #뒤에 있어도 못찾는다. Research는 찾는다\n",
+    "string3 = \"Python is fun\"\n",
+    "\n",
+    "match1 = re.match(pattern, string1) #리턴값이 문자열로 바로 나오는게 아냐\n",
+    "match2 = re.match(pattern, string2) #트루 false로 반환된다\n",
+    "match3 = re.match(pattern, string3)\n",
+    "\n",
+    "if match1:\n",
+    "    print(\"매칭된 문자열:\", match1.group())  # 매칭된 문자열: python\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n",
+    "\n",
+    "if match2:\n",
+    "    print(\"매칭된 문자열:\", match2.group())\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n",
+    "\n",
+    "if match3:\n",
+    "    print(\"매칭된 문자열:\", match3.group())\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "매칭된 문자열: python\n",
+      "매칭된 문자열: python\n",
+      "매칭되지 않음\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 문자열 전체에서 정규표현식과 매칭되는 패턴 찾기\n",
+    "pattern = r\"python\"\n",
+    "string1 = \"python is easy\"\n",
+    "string2 = \"I love python\"\n",
+    "string3 = \"Python is fun\"\n",
+    "\n",
+    "match1 = re.search(pattern, string1)\n",
+    "match2 = re.search(pattern, string2)\n",
+    "match3 = re.search(pattern, string3)\n",
+    "\n",
+    "if match1:\n",
+    "    print(\"매칭된 문자열:\", match1.group())  # 매칭된 문자열: python\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n",
+    "\n",
+    "if match2:\n",
+    "    print(\"매칭된 문자열:\", match2.group())  # 매칭된 문자열: python\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n",
+    "\n",
+    "if match3:\n",
+    "    print(\"매칭된 문자열:\", match3.group())\n",
+    "else:\n",
+    "    print(\"매칭되지 않음\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '3']\n",
+      "['1', '5']\n",
+      "['12345678']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 문자열에서 정규표현식과 매칭되는 모든 패턴 찾기\n",
+    "pattern = r\"\\d+\"\n",
+    "string1 = \"I have 2 apples and 3 oranges\"\n",
+    "string2 = \"The temperature is -1.5 degrees Celsius\"\n",
+    "string3 = \"The password is 12345678\"\n",
+    "\n",
+    "matches1 = re.findall(pattern, string1)\n",
+    "matches2 = re.findall(pattern, string2)\n",
+    "matches3 = re.findall(pattern, string3)\n",
+    "\n",
+    "print(matches1)  # ['2', '3']\n",
+    "print(matches2)  # ['-1', '5']\n",
+    "print(matches3)  # ['12345678']\n",
+    "\n",
+    "\n",
+    "#모든 매칭되는걸 다 찾아.\n",
+    "#r은 정규표현식을 쓸때 사용한다. 원시(raw)문자열 임을 뜻함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have 10 apples and 10 oranges\n",
+      "The temperature is -0.0 degrees Celsius\n",
+      "The password is ***\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 문자열에서 정규표현식과 매칭되는 모든 패턴을 다른 문자열로 대체하기\n",
+    "pattern = r\"\\d+\"\n",
+    "string1 = \"I have 2 apples and 3 oranges\"\n",
+    "string2 = \"The temperature is -1.5 degrees Celsius\"\n",
+    "string3 = \"The password is 12345678\"\n",
+    "\n",
+    "result1 = re.sub(pattern, \"10\", string1)\n",
+    "result2 = re.sub(pattern, \"0\", string2)\n",
+    "result3 = re.sub(pattern, \"***\", string3)\n",
+    "\n",
+    "print(result1)  # I have 10 apples and 10 oranges\n",
+    "print(result2)  # The temperature is -0.0 degrees Celsius\n",
+    "print(result3)  # The password is ***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010\n",
+      "1234-5678\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "phone_number = \"010-1234-5678\"\n",
+    "pattern = r\"(\\d{2,3})-(\\d{3,4})-(\\d{4})\"\n",
+    "result = re.match(pattern, phone_number)\n",
+    "\n",
+    "area_code = result.group(1) #인덱스가 1번부터네. 1번그룹은 (\\d{2,3}) 이걸말함\n",
+    "phone_number_without_area_code = result.group(2) + \"-\" + result.group(3)\n",
+    "#2번 그룹은 (\\d{3,4})\n",
+    "print(area_code)  # 010\n",
+    "print(phone_number_without_area_code)  # 1234-5678\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#날짜 표기법이 YYYY-MM-DD 형태로 되어 있을 때 이를 MM/DD/YYYY 형태로 바꾸고 싶다면\n",
+    "import re\n",
+    "\n",
+    "date = \"2022-03-18\"\n",
+    "pattern = r\"(\\d{4})-(\\d{2})-(\\d{2})\"\n",
+    "result = re.sub(pattern, r\"\\2/\\3/\\1\", date)\n",
+    "#(\\d{4}) 이게 첫번째 그룹 -> \\1 이걸 뒤로 보냈네\n",
+    "print(result)  # \"03/18/2022\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 이름 순서 바꾸기\n",
+    "string = \"Kim, Yuna\"\n",
+    "pattern = r\"(\\w+),\\s*(\\w+)\" #* 0개이상. 공백이 없을수도 있고. 공백이 없을수도 있고 있을수도 있으니.\n",
+    "result = re.sub(pattern, r\"\\2 \\1\", string)\n",
+    "print(result)  # \"Yuna Kim\"\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 패턴 옵션  \n",
+    "정규표현식에서 사용되는 패턴 옵션은 대소문자 무시, 다중행 모드 등이 있습니다.  \n",
+    "  \n",
+    "\n",
+    "re.IGNORECASE 또는 re.I 옵션  \n",
+    "re.IGNORECASE 옵션은 대소문자를 무시합니다. 예를 들어, re.findall(r\"a\", \"AbCdAaA\", re.IGNORECASE)는 ['A', 'a', 'A', 'a', 'A']와 같은 리스트를 반환합니다.  \n",
+    "\n",
+    "re.MULTILINE 또는 re.M 옵션  \n",
+    "re.MULTILINE 옵션은 다중행 모드를 사용합니다.  \n",
+    "예를 들어, \"abc\\ndef\\nghi\"라는 문자열에서 r\"^g\"를 검색할 때, re.MULTILINE 옵션이  \n",
+    "적용되면 \"g\"와 매칭됩니다.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = \"Python is an interpreted language\"\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "pattern = 'python'\n",
+    "result = re.findall(pattern, string)\n",
+    "print(result)  # []\n",
+    "\n",
+    "result = re.findall(pattern, string, re.IGNORECASE)\n",
+    "print(result)  # ['Python']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'typed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"\"\"Python is an interpreted language\n",
+    "It is dynamically typed\n",
+    "And it is easy to learn\"\"\"\n",
+    "\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "pattern = '^Python|typed$'\n",
+    "result = re.findall(pattern, string, re.MULTILINE)\n",
+    "print(result)  # ['Python', 'typed']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_email(string):\n",
+    "    pattern = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b'\n",
+    "    emails = re.findall(pattern, string)\n",
+    "    return emails\n",
+    "\n",
+    "\n",
+    "string = \"John's email is john.doe123@example.com. Jane can be reached at jane@example.co.uk.\"\n",
+    "\n",
+    "emails = extract_email(string)\n",
+    "print(emails)  # ['john.doe123@example.com', 'jane@example.co.uk']\n"
+   ]
   }
  ],
  "metadata": {
