--- a/6월9일/2교시.ipynb
+++ b/6월9일/2교시.ipynb
@@ -520,6 +520,41 @@
     "emails = extract_email(string)\n",
     "print(emails)  # ['john.doe123@example.com', 'jane@example.co.uk']\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def is_valid_phone_number(phone_number):\n",
+    "    pattern = r'^\\d{3}-\\d{3,4}-\\d{4}$'\n",
+    "#숫자3개 – 3~4개 - 4개 에 매칭. \\d 는 숫자\n",
+    "    if re.match(pattern, phone_number):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "phone_number1 = '010-1234-5678'\n",
+    "phone_number2 = '02-123-4567'\n",
+    "phone_number3 = '123-4567'\n",
+    "\n",
+    "print(is_valid_phone_number(phone_number1))  # True\n",
+    "print(is_valid_phone_number(phone_number2))  # False\n",
+    "print(is_valid_phone_number(phone_number3))  # False\n"
+   ]
   }
  ],
  "metadata": {
