--- a/6월9일/2교시.ipynb
+++ b/6월9일/2교시.ipynb
@@ -555,6 +555,60 @@
     "print(is_valid_phone_number(phone_number2))  # False\n",
     "print(is_valid_phone_number(phone_number3))  # False\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = input()\n",
+    "bear = input()\n",
+    "bearcopy = bear\n",
+    "count = 0\n",
+    "count2 = 0\n",
+    "gae = 0\n",
+    "gae2 = 0\n",
+    "\n",
+    "while bear:\n",
+    "    gae = len(bear)\n",
+    "    bear = bear.replace(\"()\", \"O\")\n",
+    "    bear = bear.replace(\")(\", \"X\")\n",
+    "    bear = bear.replace(\"O\", \"\")\n",
+    "    bear = bear.replace(\"X\", \"\")\n",
+    "    count += 1\n",
+    "    if gae == len(bear):\n",
+    "        break\n",
+    "\n",
+    "while bearcopy:\n",
+    "    gae2 = len(bearcopy)\n",
+    "    bearcopy = bearcopy.replace(\")(\", \"X\")\n",
+    "    bearcopy = bearcopy.replace(\"()\", \"O\")\n",
+    "    bearcopy = bearcopy.replace(\"X\", \"\")\n",
+    "    bearcopy = bearcopy.replace(\"O\", \"\")\n",
+    "    count2 += 1\n",
+    "    if gae2 == len(bearcopy):\n",
+    "        break\n",
+    "\n",
+    "if gae == len(bear) and gae2 == len(bearcopy):\n",
+    "    print(\"-1\")\n",
+    "\n",
+    "if not bear or not bearcopy:\n",
+    "    if count > count2:\n",
+    "        print(count2)\n",
+    "    elif count < count2:\n",
+    "        print(count)\n",
+    "    elif count == count2:\n",
+    "        print(count)\n"
+   ]
   }
  ],
  "metadata": {
@@ -573,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
