--- a/6월9일/파이썬_5.ipynb
+++ b/6월9일/파이썬_5.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -43,6 +43,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dVfzswSztdft"
@@ -56,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,9 +70,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "요일을 입력하세요.Mon\n",
-            "1\n",
-            "요일을 입력하세요.aaas\n",
             "항목이 없습니다\n"
           ]
         }
@@ -253,7 +251,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.11.3"
     }
   },
