--- a/6월19일/4교시_웹크롤링.ipynb
+++ b/6월19일/4교시_웹크롤링.ipynb
@@ -178,39 +178,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n"
+      "1 스파이더맨: 어크로스 더 유니버스 전체관람가 8.9 26.4 23.06.21\n",
+      "2 귀공자 청소년관람불가 8.6 21.0 23.06.21\n",
+      "3 엘리멘탈 전체관람가 8.8 16.0 23.06.14\n",
+      "4 범죄도시3 15세이상관람가 6.7 13.1 23.05.31\n",
+      "5 플래시 12세이상관람가 8.0 6.6 23.06.14\n",
+      "6 명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인 12세이상관람가 10.0 3.8 23.06.23\n",
+      "7 수라 전체관람가 10.0 1.2 23.06.21\n",
+      "8 파이어하트 전체관람가 10.0 1.2 23.06.28\n",
+      "9 트랜스포머: 비스트의 서막 12세이상관람가 7.3 1.0 23.06.06\n",
+      "10 비의도적 연애담 스페셜 12세이상관람가 10.0 0.9 23.06.14\n",
+      "11 인디아나 존스: 운명의 다이얼 12세이상관람가 9.0 0.7 23.06.28\n",
+      "12 가디언즈 오브 갤럭시: Volume 3 12세이상관람가 8.7 0.6 23.05.03\n",
+      "13 인드림 청소년관람불가 9.8 0.5 23.06.21\n",
+      "14 너의 눈을 들여다보면 전체관람가 8.7 0.4 23.06.14\n",
+      "15 어디로 가고 싶으신가요 12세이상관람가 9.6 0.4 23.07.05\n",
+      "16 마마무: 마이콘 더 무비 전체관람가 0.0 0.4 23.06.21\n",
+      "17 1986 그 여름, 그리고 고등어통조림 12세이상관람가 8.6 0.4 23.07.05\n",
+      "18 남은 인생 10년 12세이상관람가 8.0 0.3 23.05.24\n",
+      "19 엔니오: 더 마에스트로 12세이상관람가 10.0 0.3 23.07.05\n",
+      "20 굿바이 12세이상관람가 9.0 0.3 23.06.21\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   순위      20 non-null     object\n",
+      " 1   영화면     20 non-null     object\n",
+      " 2   관람가     20 non-null     object\n",
+      " 3   평점      20 non-null     object\n",
+      " 4   예매율     20 non-null     object\n",
+      " 5   개봉일     20 non-null     object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 1.1+ KB\n"
      ]
     }
    ],
    "source": [
     "#노션 ppt9,10 봐봐. 크롤링 실습\n",
     "import requests\n",
+    "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "url = 'https://movie.daum.net/ranking/reservation'\n",
@@ -223,10 +237,345 @@
     "li_list=ol.find_all('li')\n",
     "li_list[1]#0,1,2 다른영화들도 찍어보면서 정보 잘 가져 와지는지 보고 이제 반복문 돌리면 되겠네\n",
     "\n",
+    "#아래까지 다 마치고 나서 이제 데이터프레임으로. 2차원 배열을 이용해보자\n",
+    "\n",
+    "movie=[]\n",
+    "\n",
     "for li in li_list:\n",
     "    rank = li.select_one('.rank_num').text ##이것만 하고 프린트 랭크 하면 랭크만 출력\n",
-    "    name = li.select_one('.link_txt')\n",
-    "    print(rank) #랭크들만 출력이 되네\n"
+    "    name = li.select_one('.link_txt').text #하나하나 해가면서 줄여가. \n",
+    "    #몇세 관람가인지도 가져 나와보자 이제. <span> 태그안에 있네\n",
+    "    #<span class=\"ico_movie ico_see \">전체관람가</span>\n",
+    "    see = li.select_one('.ico_see').text\n",
+    "    grade = li.select_one('.txt_grade').text\n",
+    "    num = li.select_one('.txt_num').text[:-1] #마지막글자. % 떨쳐내기\n",
+    "    mvdate = li.select_one('.txt_info>.txt_num').text\n",
+    "    movie.append([rank, name,see,grade,num, mvdate])\n",
+    "    print(rank, name,see,grade,num, mvdate) #랭크들만 출력이 되네 이제 이걸 데이터프레임으로 바꿔\n",
+    "\n",
+    "movie\n",
+    "\n",
+    "df = pd.DataFrame(movie, columns = ['순위', '영화면', '관람가', '평점', '예매율', '개봉일'])\n",
+    "df.info()\n",
+    "df.head()\n",
+    "\n",
+    "df.to_csv('movie_info.csv', index=False, encoding=\"cp949\") #한글이 있기에 인코딩을 좀 해준다.\n",
+    "#가장 쉬운게 csv를 만들고 csv를 다시 읽는다. 아래로 가\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   순위      20 non-null     int64  \n",
+      " 1   영화면     20 non-null     object \n",
+      " 2   관람가     20 non-null     object \n",
+      " 3   평점      20 non-null     float64\n",
+      " 4   예매율     20 non-null     float64\n",
+      " 5   개봉일     20 non-null     object \n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 1.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('movie_info.csv', encoding='cp949') \n",
+    "df.info()#csv 만든거 가져온걸로 이제 시작한다\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>순위</th>\n",
+       "      <th>영화면</th>\n",
+       "      <th>관람가</th>\n",
+       "      <th>평점</th>\n",
+       "      <th>예매율</th>\n",
+       "      <th>개봉일</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>비의도적 연애담 스페셜</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>23.06.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>엔니오: 더 마에스트로</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>23.07.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>23.06.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>수라</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>파이어하트</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>23.06.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>인드림</td>\n",
+       "      <td>청소년관람불가</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>어디로 가고 싶으신가요</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>23.07.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>인디아나 존스: 운명의 다이얼</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>23.06.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>굿바이</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>스파이더맨: 어크로스 더 유니버스</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>엘리멘탈</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>23.06.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>가디언즈 오브 갤럭시: Volume 3</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>23.05.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>너의 눈을 들여다보면</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>23.06.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>귀공자</td>\n",
+       "      <td>청소년관람불가</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1986 그 여름, 그리고 고등어통조림</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>23.07.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>플래시</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>23.06.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>남은 인생 10년</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>23.05.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>트랜스포머: 비스트의 서막</td>\n",
+       "      <td>12세이상관람가</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23.06.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>범죄도시3</td>\n",
+       "      <td>15세이상관람가</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>23.05.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>마마무: 마이콘 더 무비</td>\n",
+       "      <td>전체관람가</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>23.06.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    순위                               영화면       관람가    평점   예매율       개봉일\n",
+       "9   10                      비의도적 연애담 스페셜  12세이상관람가  10.0   0.9  23.06.14\n",
+       "18  19                      엔니오: 더 마에스트로  12세이상관람가  10.0   0.3  23.07.05\n",
+       "5    6  명탐정코난: 하이바라 아이 이야기 ~흑철의 미스터리 트레인  12세이상관람가  10.0   3.8  23.06.23\n",
+       "6    7                                수라     전체관람가  10.0   1.2  23.06.21\n",
+       "7    8                             파이어하트     전체관람가  10.0   1.2  23.06.28\n",
+       "12  13                               인드림   청소년관람불가   9.8   0.5  23.06.21\n",
+       "14  15                      어디로 가고 싶으신가요  12세이상관람가   9.6   0.4  23.07.05\n",
+       "10  11                  인디아나 존스: 운명의 다이얼  12세이상관람가   9.0   0.7  23.06.28\n",
+       "19  20                               굿바이  12세이상관람가   9.0   0.3  23.06.21\n",
+       "0    1                스파이더맨: 어크로스 더 유니버스     전체관람가   8.9  26.4  23.06.21\n",
+       "2    3                              엘리멘탈     전체관람가   8.8  16.0  23.06.14\n",
+       "11  12             가디언즈 오브 갤럭시: Volume 3  12세이상관람가   8.7   0.6  23.05.03\n",
+       "13  14                       너의 눈을 들여다보면     전체관람가   8.7   0.4  23.06.14\n",
+       "1    2                               귀공자   청소년관람불가   8.6  21.0  23.06.21\n",
+       "16  17             1986 그 여름, 그리고 고등어통조림  12세이상관람가   8.6   0.4  23.07.05\n",
+       "4    5                               플래시  12세이상관람가   8.0   6.6  23.06.14\n",
+       "17  18                         남은 인생 10년  12세이상관람가   8.0   0.3  23.05.24\n",
+       "8    9                    트랜스포머: 비스트의 서막  12세이상관람가   7.3   1.0  23.06.06\n",
+       "3    4                             범죄도시3  15세이상관람가   6.7  13.1  23.05.31\n",
+       "15  16                     마마무: 마이콘 더 무비     전체관람가   0.0   0.4  23.06.21"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('movie_info.csv', encoding='cp949') \n",
+    "df.sort_values('평점', ascending=False) #평점으로 정렬도 해보고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   순위      20 non-null     int64         \n",
+      " 1   영화면     20 non-null     object        \n",
+      " 2   관람가     20 non-null     object        \n",
+      " 3   평점      20 non-null     float64       \n",
+      " 4   예매율     20 non-null     float64       \n",
+      " 5   개봉일     20 non-null     datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(2), int64(1), object(2)\n",
+      "memory usage: 1.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#개봉일만 날짜형으로 바꿔보자\n",
+    "df = pd.read_csv('movie_info.csv', encoding='cp949') \n",
+    "df['개봉일'] = pd.to_datetime(df['개봉일'], format='%y.%m.%d')#소문자y 는 2자리 Y는 4자리\n",
+    "df.info()"
    ]
   }
  ],
