--- a/200제.ipynb
+++ b/200제.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -129,24 +129,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'prinln' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#8번\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m prinln(\u001b[39m\"\u001b[39m\u001b[39mfirst\u001b[39m\u001b[39m\"\u001b[39m);\u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msecond\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'prinln' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first\n",
+      "second\n"
      ]
     }
    ],
    "source": [
     "#8번\n",
     "print(\"first\");print(\"second\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-56000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import Queue\n",
+    "import numpy as np\n",
+    "\n",
+    "K= int(input())\n",
+    "\n",
+    "que = Queue()\n",
+    "\n",
+    "seroTotal = 0\n",
+    "seroMax = 0\n",
+    "garoTotal = 0\n",
+    "garoMax = 0\n",
+    "\n",
+    "# melon = [[0] * 2 for _ in range(6)]\n",
+    "melon = np.zeros((6, 2), dtype=int)\n",
+    "four = [0] * 4\n",
+    "\n",
+    "for i in range(6):\n",
+    "    data = input().split()\n",
+    "    compass = int(data[0])\n",
+    "    length = int(data[1])\n",
+    "\n",
+    "    melon[i][0] = compass\n",
+    "    melon[i][1] = length\n",
+    "\n",
+    "    if (melon[i][0] == 3 | melon[i][0] == 4):\n",
+    "        seroTotal += melon[i][1]\n",
+    "    if (melon[i][0] == 1 | melon[i][0] == 2):\n",
+    "        garoTotal += melon[i][1]    \n",
+    "    que.put(length)    \n",
+    "\n",
+    "seroMax = int(seroTotal / 2)\n",
+    "garoMax = int(garoTotal / 2)\n",
+    "\n",
+    "lastIndex = 0\n",
+    "\n",
+    "for i in range(5):\n",
+    "    if((melon[i][1] == seroMax and melon[i + 1][1] == garoMax) or (melon[i][1] == garoMax and melon[i + 1][1] == seroMax)):\n",
+    "        lastIndex = i + 1\n",
+    "if ((melon[5][1] == seroMax and melon[0][1] == garoMax) or (melon[5][1] == garoMax and melon[0][1] == seroMax)):\n",
+    "\t\tlastIndex = 0\n",
+    "if (lastIndex != 5): \n",
+    "\tfor i in range(lastIndex):\n",
+    "\t\tque.put(que.get());                \n",
+    "for i in range(4):\n",
+    "       four[i] = que.get()\n",
+    "result = ((seroMax * garoMax) - (four[1] * four[2])) * K   \n",
+    "print(result)    "
    ]
   }
  ],
@@ -166,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
