자바를 파이썬으로 끝

--- a/200제.ipynb
+++ b/200제.ipynb
@@ -184,9 +184,9 @@
     "    melon[i][0] = compass\n",
     "    melon[i][1] = length\n",
     "\n",
-    "    if (melon[i][0] == 3 | melon[i][0] == 4):\n",
+    "    if (melon[i][0] == 3 or melon[i][0] == 4):\n",
     "        seroTotal += melon[i][1]\n",
-    "    if (melon[i][0] == 1 | melon[i][0] == 2):\n",
+    "    if (melon[i][0] == 1 or melon[i][0] == 2):\n",
     "        garoTotal += melon[i][1]    \n",
     "    que.put(length)    \n",
     "\n",
@@ -202,7 +202,7 @@
     "\t\tlastIndex = 0\n",
     "if (lastIndex != 5): \n",
     "\tfor i in range(lastIndex):\n",
-    "\t\tque.put(que.get());                \n",
+    "\t\tque.put(que.get())             \n",
     "for i in range(4):\n",
     "       four[i] = que.get()\n",
     "result = ((seroMax * garoMax) - (four[1] * four[2])) * K   \n",
