--- a/200제.ipynb
+++ b/200제.ipynb
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-56000\n"
+      "47600.0\n"
      ]
     }
    ],
@@ -172,8 +172,8 @@
     "garoTotal = 0\n",
     "garoMax = 0\n",
     "\n",
-    "# melon = [[0] * 2 for _ in range(6)]\n",
-    "melon = np.zeros((6, 2), dtype=int)\n",
+    "melon = [[0] * 2 for _ in range(6)]\n",
+    "#melon = np.zeros((6, 2), dtype=int)\n",
     "four = [0] * 4\n",
     "\n",
     "for i in range(6):\n",
@@ -184,10 +184,10 @@
     "    melon[i][0] = compass\n",
     "    melon[i][1] = length\n",
     "\n",
-    "    if (melon[i][0] == 3 or melon[i][0] == 4):\n",
-    "        seroTotal += melon[i][1]\n",
-    "    if (melon[i][0] == 1 or melon[i][0] == 2):\n",
-    "        garoTotal += melon[i][1]    \n",
+    "    if (compass  == 3 or compass  == 4):\n",
+    "        seroTotal += length\n",
+    "    if (compass  == 1 or compass  == 2):\n",
+    "        garoTotal += length    \n",
     "    que.put(length)    \n",
     "\n",
     "seroMax = int(seroTotal / 2)\n",
@@ -200,8 +200,8 @@
     "        lastIndex = i + 1\n",
     "if ((melon[5][1] == seroMax and melon[0][1] == garoMax) or (melon[5][1] == garoMax and melon[0][1] == seroMax)):\n",
     "\t\tlastIndex = 0\n",
-    "if (lastIndex != 5): \n",
-    "\tfor i in range(lastIndex):\n",
+    "if lastIndex != 5: \n",
+    "\tfor i in range(lastIndex + 1):\n",
     "\t\tque.put(que.get())             \n",
     "for i in range(4):\n",
     "       four[i] = que.get()\n",
