--- a/200제.ipynb
+++ b/200제.ipynb
@@ -208,6 +208,31 @@
     "result = ((seroMax * garoMax) - (four[1] * four[2])) * K   \n",
     "print(result)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.factorial(n)\n",
+    "\n",
+    "def factorial (n):\n",
+    "    if n==0:\n",
+    "        n=1\n",
+    "    if n<=1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return factorial(n - 1) * n\n",
+    "    \n",
+    "def pluscase (x,y,z):\n",
+    "    return factorial(x+y+z)/(factorial(x)*factorial(y)*factorial(z))\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -226,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
