--- a/200제.ipynb
+++ b/200제.ipynb
@@ -639,6 +639,171 @@
     "phone_number1 = phone_number.replace(\"-\", \" \")\n",
     "print(phone_number1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abcdfe2A354A32A\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'abcdfe2a354a32a'\n",
+    "string = string.replace('a', 'A')\n",
+    "print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'abcd'\n",
+    "string.replace('b', 'B')\n",
+    "print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 김민수 나이: 10\n",
+      "이름: 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "print(\"이름: %s 나이: %d\" % (name1, age1))\n",
+    "print(\"이름: %s 나이: %d\" % (name2, age2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 김민수 나이: 10\n",
+      "이름: 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "print(\"이름: {} 나이: {}\".format(name1, age1))\n",
+    "print(\"이름: {} 나이: {}\".format(name2, age2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 김민수 나이: 10\n",
+      "이름: 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "print(f\"이름: {name1} 나이: {age1}\")\n",
+    "print(f\"이름: {name2} 나이: {age2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5969782550 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "상장주식수 = \"5,969,782,550\"\n",
+    "컴마제거 = 상장주식수.replace(\",\", \"\")\n",
+    "타입변환 = int(컴마제거)\n",
+    "print(타입변환, type(타입변환))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020/03\n"
+     ]
+    }
+   ],
+   "source": [
+    "분기 = \"2020/03(E) (IFRS연결)\"\n",
+    "print(분기[:7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "삼성전자\n"
+     ]
+    }
+   ],
+   "source": [
+    "#빈공간 제거\n",
+    "data = \"   삼성전자    \"\n",
+    "data1 = data.strip()\n",
+    "print(data1)"
+   ]
   }
  ],
  "metadata": {
@@ -657,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
