--- a/200제.ipynb
+++ b/200제.ipynb
@@ -804,6 +804,54 @@
     "data1 = data.strip()\n",
     "print(data1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BTC_KRW\n"
+     ]
+    }
+   ],
+   "source": [
+    "ticker = \"btc_krw\"\n",
+    "ticker1 = ticker.upper()\n",
+    "print(ticker1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "btc_krw\n"
+     ]
+    }
+   ],
+   "source": [
+    "ticker = \"BTC_KRW\"\n",
+    "ticker1 = ticker.lower()\n",
+    "print(ticker1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"hello\"\n",
+    "a = a.capitalize()\n"
+   ]
   }
  ],
  "metadata": {
