--- a/200제.ipynb
+++ b/200제.ipynb
@@ -845,12 +845,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "a = a.capitalize()\n"
+    "a1 = a.capitalize()\n",
+    "print(a1)\n"
    ]
   }
  ],
@@ -870,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
