--- a/tensorflow/텐서플로과제001.ipynb
+++ b/tensorflow/텐서플로과제001.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#과제 001  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -131,6 +139,80 @@
     "plt.xlabel('$x=4.0$')\n",
     "plt.ylabel('$y=x^4-3x^3+2$')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#과제 002"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m batch_size \u001b[39m=\u001b[39m \u001b[39m32\u001b[39m\n\u001b[0;32m     13\u001b[0m dataset \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataset\u001b[39m.\u001b[39mfrom_tensor_slices((x_train, y_train))\n\u001b[1;32m---> 14\u001b[0m w \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mVariable(tf\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mnormal(shape\u001b[39m=\u001b[39m(x\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m],\u001b[39m1\u001b[39m)))\n\u001b[0;32m     15\u001b[0m b \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mVariable(tf\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mnormal([]))\n\u001b[0;32m     17\u001b[0m loss_list \u001b[39m=\u001b[39m []\n",
+      "File \u001b[1;32mc:\\Users\\kikon\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tensorflow\\python\\framework\\tensor_shape.py:957\u001b[0m, in \u001b[0;36mTensorShape.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    955\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    956\u001b[0m   \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_v2_behavior:\n\u001b[1;32m--> 957\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dims[key]\n\u001b[0;32m    958\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    959\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdims[key]\n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.boston_housing.load_data(\n",
+    "    path='boston_housing.npz', test_split=0.2, seed=113\n",
+    ")\n",
+    "\n",
+    "batch_size = 32\n",
+    "dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train))\n",
+    "w = tf.Variable(tf.random.normal(shape=(x.shape[1],1)))\n",
+    "b = tf.Variable(tf.random.normal([]))\n",
+    "\n",
+    "loss_list = []\n",
+    "\n",
+    "tf_MSE = tf.keras.losses.MeanSquaredError()\n",
+    "optimizer = tf.keras.optimizers.Adam()\n",
+    "\n",
+    "for epoch in range(100):\n",
+    "  dataset_train = dataset.shuffle(buffer_size=1024).batch(batch_size)\n",
+    "  for step, (x_batch, y_batch) in enumerate(dataset_train):\n",
+    "\n",
+    "    with tf.GradientTape() as tape:\n",
+    "      y_hat = x @ w + b\n",
+    "      loss = tf_MSE(y_hat, y)\n",
+    "\n",
+    "    dw, db = tape.gradient(loss, [w, b])\n",
+    "    optimizer.apply_gradients([[dw, w], [db, b]])\n",
+    "    loss/=batch_size\n",
+    "    loss_list.append(loss.numpy())\n",
+    "\n",
+    "  if not epoch%10:\n",
+    "    print(\"epoch={}: loss={:>8.4f}\".format(epoch, loss.numpy()))\n",
+    "\n",
+    "print(\"loss={:>8.4f}\".format(loss.numpy()))\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 5))\n",
+    "ax.plot(loss_list)\n",
+    "ax.set(xlabel=\"epochs\", ylabel=\"loss\")\n",
+    "\n",
+    "\n",
+    "print(\"loss={:>8.4f}\".format(tf.reduce_mean(tf_MSE(x@w+b, y))))"
+   ]
   }
  ],
  "metadata": {
@@ -149,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
