냐하하~7월4일

--- a/AI/Search Tool v1 - copy codes/steepest ascent (n).ipynb
+++ b/AI/Search Tool v1 - copy codes/steepest ascent (n).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,24 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/problem.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 65\u001b[0m\n\u001b[0;32m     61\u001b[0m     c \u001b[39m=\u001b[39m [\u001b[39mround\u001b[39m(value, \u001b[39m3\u001b[39m) \u001b[39mfor\u001b[39;00m value \u001b[39min\u001b[39;00m solution]\n\u001b[0;32m     62\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mtuple\u001b[39m(c)  \u001b[39m# Convert the list to a tuple\u001b[39;00m\n\u001b[1;32m---> 65\u001b[0m main()\n",
-      "Cell \u001b[1;32mIn[2], line 10\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[0;32m      9\u001b[0m     \u001b[39m# Create an instance of numerical optimization problem\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m     p \u001b[39m=\u001b[39m createProblem()   \u001b[39m# 'p': (expr, domain) #첫단계. pseudo 코드 알고리즘 처럼\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[39m# Call the search algorithm\u001b[39;00m\n\u001b[0;32m     12\u001b[0m     solution, minimum \u001b[39m=\u001b[39m steepestAscent(p) \u001b[39m#직접 구현해야.\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[3], line 11\u001b[0m, in \u001b[0;36mcreateProblem\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreateProblem\u001b[39m(): \u001b[39m### #문제에 대한 정의. #여기부터 작성 해야하네?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m     \u001b[39m## Read in an expression and its domain from a file.    \u001b[39;00m\n\u001b[0;32m      3\u001b[0m     \u001b[39m## Then, return a problem 'p'.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39m## 'low' is a list of lower bounds of the varaibles.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[39m## 'up' is a list of upper bounds of the varaibles.\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     fileName \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/problem\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter the filename of function:\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 11\u001b[0m     infile \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(fileName,\u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     12\u001b[0m     expression \u001b[39m=\u001b[39m infile\u001b[39m.\u001b[39mreadline() \u001b[39m#txt파일 공식적힌 첫째줄\u001b[39;00m\n\u001b[0;32m     13\u001b[0m     varName \u001b[39m=\u001b[39m []\n",
-      "File \u001b[1;32mc:\\Users\\user\\AppData\\Local\\Programs\\Thonny\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/problem.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def randomInit(p): ###\n",
@@ -206,20 +191,15 @@
       "Mutation step size: 0.01\n",
       "\n",
       "Solution found:\n",
-      "(1.995, 5.005, -8.004, -1.004, 6.996)\n",
+      "(1.998, 5.001, -7.999, -1.002, 6.996)\n",
       "Minimum value: 0.000\n",
       "\n",
-      "Total number of evaluations: 53,051\n"
+      "Total number of evaluations: 82,051\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "import math\n",
-    "\n",
-    "DELTA = 0.01   # Mutation step size\n",
-    "NumEval = 0    # Total number of evaluations\n",
-    "#global 변수\n",
+    "from numeric import *\n",
     "\n",
     "def main():\n",
     "    # Create an instance of numerical optimization problem\n",
@@ -231,35 +211,6 @@
     "    displaySetting()\n",
     "    # Report results\n",
     "    displayResult(solution, minimum)\n",
-    "\n",
-    "\n",
-    "def createProblem(): ### #문제에 대한 정의. #여기부터 작성 해야하네?\n",
-    "    ## Read in an expression and its domain from a file.   \n",
-    "    ## Then, return a problem 'p'.\n",
-    "    ## 'p' is a tuple of 'expression' and 'domain'.\n",
-    "    ## 'expression' is a string.\n",
-    "    ## 'domain' is a list of 'varNames', 'low', and 'up'.\n",
-    "    ## 'varNames' is a list of variable names.\n",
-    "    ## 'low' is a list of lower bounds of the varaibles.\n",
-    "    ## 'up' is a list of upper bounds of the varaibles.\n",
-    "    fileName = \"problem/\" + input(\"Enter the filename of function:\") + \".txt\"\n",
-    "    infile = open(fileName,'r')\n",
-    "    expression = infile.readline() #txt파일 공식적힌 첫째줄\n",
-    "    varName = []\n",
-    "    low = []\n",
-    "    up = []\n",
-    "    line = infile.readline()        \n",
-    "    while line != '':\n",
-    "        data = line.split(',')\n",
-    "        varName.append(data[0])\n",
-    "        low.append(float(data[1]))\n",
-    "        up.append(float(data[2]))\n",
-    "        line = infile.readline() \n",
-    "             \n",
-    "    infile.close()\n",
-    "    domain = [varName, low, up]\n",
-    "    \n",
-    "    return expression, domain\n",
     "\n",
     "\n",
     "def steepestAscent(p): #p가 주어지면 전체적으로 반복 #얘는 주변 후보들 다 찾아봐\n",
