--- a/tensorflow/tf_01.ipynb
+++ b/tensorflow/tf_01.ipynb
@@ -371,6 +371,25 @@
         "\n",
         "1. 신백균, 머신러닝/딥러닝 문제해결 전략, 2022"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ab\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\n",
+        "    'a'+'b'\n",
+        ")"
+      ]
     }
   ],
   "metadata": {
