--- a/백준.ipynb
+++ b/백준.ipynb
@@ -42,24 +42,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
-    "alpa = str(input())\n",
-    "beta = list(alpa)\n",
+    "print(ord(\"a\")) #아스키코드 변환\n",
+    "print(chr(97))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B', 'A', 'N', 'A', 'N', 'A']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = str(input())\n",
+    "num2 = num.upper()\n",
     "\n",
-    "max = 0\n",
-    "double = 0\n",
+    "alpa = list(num2)\n",
     "\n",
-    "for i in (0, len(beta)-2):\n",
-    "    count = 0\n",
-    "    for j in (1, len(beta)-1):\n",
-    "        if beta[i] == beta[j]:\n",
-    "            count += 1                   \n",
-    "            if max < count:\n",
-    "                max = count\n",
-    "                print(max)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
