7월 11일 냐하하

--- a/AI park/park4_0711.ipynb
+++ b/AI park/park4_0711.ipynb
@@ -554,6 +554,241 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# csv = 컴마로 구분된 값들  \n",
+    "<이름, 나이, 성별, 성적>\n",
+    "\n",
+    "홍길동, 10, 남자, 10  \n",
+    "신사임당, 20, 여자, 100  \n",
+    "세종대왕,,남자,1000  \n",
+    "나이 모르면, 컴마 연속으로  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1, 'two': 2, 'three': 3}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [[\"one\", 1], [\"two\", 2], [\"three\", 3]]\n",
+    "dict(list1)\n",
+    "\n",
+    "list2 = [(\"one\", 1), (\"two\", 2), (\"three\", 3)]\n",
+    "dict(list2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Swaroop's address is swaroop@swaroopch.com\n",
+      "\n",
+      "There are 3 contacts inthe address-book\n",
+      "\n",
+      "Contact Swaroop at swaroop@swaroopch.com\n",
+      "Contact Larry at larry@wall.ort\n",
+      "Contact Matsumoto at matz@ruby-lang.ort\n",
+      "('Swaroop', 'swaroop@swaroopch.com')\n",
+      "('Larry', 'larry@wall.ort')\n",
+      "('Matsumoto', 'matz@ruby-lang.ort')\n",
+      "('Swaroop', 'swaroop@swaroopch.com')\n",
+      "('Larry', 'larry@wall.ort')\n",
+      "('Matsumoto', 'matz@ruby-lang.ort')\n",
+      "Swaroop: swaroop@swaroopch.com\n",
+      "Larry: larry@wall.ort\n",
+      "Matsumoto: matz@ruby-lang.ort\n",
+      "swaroop@swaroopch.com\n",
+      "larry@wall.ort\n",
+      "matz@ruby-lang.ort\n",
+      "(0, 'Swaroop')\n",
+      "(1, 'Larry')\n",
+      "(2, 'Matsumoto')\n",
+      "('Swaroop', 'swaroop@swaroopch.com')\n",
+      "('Larry', 'larry@wall.ort')\n",
+      "('Matsumoto', 'matz@ruby-lang.ort')\n",
+      "0 Swaroop swaroop@swaroopch.com\n",
+      "1 Larry larry@wall.ort\n",
+      "2 Matsumoto matz@ruby-lang.ort\n"
+     ]
+    }
+   ],
+   "source": [
+    "addr = {'Swaroop' : 'swaroop@swaroopch.com',\n",
+    "        'Larry' : 'larry@wall.ort',\n",
+    "        'Matsumoto' : 'matz@ruby-lang.ort',\n",
+    "        'Spammer' : 'spammer@hotmail.com'}\n",
+    "\n",
+    "print(\"Swaroop's address is\", addr['Swaroop'])\n",
+    "\n",
+    "del addr['Spammer']\n",
+    "print('\\nThere are {} contacts inthe address-book\\n'.format(len(addr)))\n",
+    "\n",
+    "for name, address in list(addr.items()):\n",
+    "    print('Contact {} at {}'.format(name, address))\n",
+    "    \n",
+    "#딕셔너리에 그냥 for문 돌리면 key만 나와\n",
+    "\n",
+    "for v in addr.items(): #tuple이 나온다. for문을 돌면 이 pair들이 하나씩 튀어나온다.\n",
+    "    print(v)\n",
+    "    \n",
+    "a,b,c = (1,2,3) #튜플 이런식으로 썼잖아.\n",
+    "\n",
+    "for v in addr.items(): #이렇게 하지 않아도\n",
+    "    key = v[0]\n",
+    "    value = v[1]\n",
+    "    print(v)\n",
+    "\n",
+    "for key, value in addr.items(): #이렇게 하면 된다.\n",
+    "    print('{}: {}'.format(key, value))\n",
+    "    \n",
+    "#value만 돌고싶으면?\n",
+    "\n",
+    "for v in addr.values(): #값만 갖고싶을때 values만.\n",
+    "    print(v)\n",
+    "    \n",
+    "for v in enumerate(addr): #enum. 열거하다. 튜플로 나오네. 순서대로 index로. 근데 값은 안나오네.    \n",
+    "    print(v) #addr만 있으니까 key만 튀어나왔징.\n",
+    "#키, 밸류를 한꺼번에 꺼내오고 싶엉\n",
+    "\n",
+    "for i, v in enumerate(addr.items()):\n",
+    "    print(v)\n",
+    "\n",
+    "for i, (key, value) in enumerate(addr.items()): #(key, value) 괄호를 안해주면 에러. 왜?\n",
+    "#for i, key, value in enumerate(addr.items()):\n",
+    "    print(i, key, value)\n",
+    "\n",
+    "addr['Guido']     = 'guido@python.org'\n",
+    "if 'Guido' in addr:\n",
+    "    print(\"\\nGuido's address is\", addr['Guido'])\n",
+    "\n",
+    "    \n",
+    "\n",
+    "#(0, (p, 12)) #튜플을 얻었다. 원소 2개. 0이 i, 뒤 튜플이 v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Kim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m addr \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mSwaroop\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39mswaroop@swaroopch.com\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      2\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mLarry\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39mlarry@wall.ort\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      3\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mMatsumoto\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39mmatz@ruby-lang.ort\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mSpammer\u001b[39m\u001b[39m'\u001b[39m : \u001b[39m'\u001b[39m\u001b[39mspammer@hotmail.com\u001b[39m\u001b[39m'\u001b[39m}\n\u001b[1;32m----> 6\u001b[0m addr[\u001b[39m'\u001b[39;49m\u001b[39mKim\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m      7\u001b[0m \u001b[39m# addr.get('Park')\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m# addr.get('Park', 100)\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Kim'"
+     ]
+    }
+   ],
+   "source": [
+    "addr = {'Swaroop' : 'swaroop@swaroopch.com',\n",
+    "        'Larry' : 'larry@wall.ort',\n",
+    "        'Matsumoto' : 'matz@ruby-lang.ort',\n",
+    "        'Spammer' : 'spammer@hotmail.com'}\n",
+    "\n",
+    "addr['Kim'] #없으면 에러난다\n",
+    "addr.get('Park') #마찬가지로 같이 얻어오는건데 이건 에러가 안난다\n",
+    "addr.get('Park', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'swaroop@swaroopch.com'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addrs = dict(addr)\n",
+    "addrs #new로 복사할때. 다른주소.\n",
+    "\n",
+    "max(addr) #key가 나온다.\n",
+    "max(addr.values()) #이러면 값이 나온다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the person's age group child\n",
+      "minor\n",
+      "adult\n",
+      "senior\n",
+      "The admission fee is 0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"child\": 0,\n",
+    "    \"minor\": 5,\n",
+    "    \"adult\": 10,\n",
+    "    \"senior\": 8\n",
+    "}\n",
+    "\n",
+    "def main():\n",
+    "    print(\"Enter the person's age group \", end=\"\")\n",
+    "    for k in d:\n",
+    "        print(k)\n",
+    "    ageGroup = input(\"(child, minor, adult, or senior): \")\n",
+    "    print(\"The admission fee is\",\n",
+    "          determineAdmissionFee(ageGroup), \"dollars.\")\n",
+    "\n",
+    "\n",
+    "def determineAdmissionFee(ageGroup):\n",
+    "    if ageGroup == \"child\":\n",
+    "        return 0\n",
+    "    elif ageGroup == \"minor\":\n",
+    "        return 5\n",
+    "    elif ageGroup == \"adult\":\n",
+    "        return 10\n",
+    "    elif ageGroup == \"senior\":\n",
+    "        return 8\n",
+    "\n",
+    "\n",
+    "def determineAdmissionFee2(agegroup):\n",
+    "\n",
+    "    return d.get(agegroup, 10000) #최소한 에러는 안난다.\n",
+    "\n",
+    "main()"
+   ]
   }
  ],
  "metadata": {
