--- a/AI park/park5_0713.ipynb
+++ b/AI park/park5_0713.ipynb
@@ -448,14 +448,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01\n"
+      "FileNotFoundError is occured\n",
+      "[Errno 2] No such file or directory: 'asdfsdf'\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'infile' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[88], line 24\u001b[0m\n\u001b[0;32m     22\u001b[0m         infile\u001b[39m.\u001b[39mclose()\n\u001b[0;32m     23\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTry statement is finishied.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 24\u001b[0m main()\n",
+      "Cell \u001b[1;32mIn[88], line 22\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mNo error occured\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m---> 22\u001b[0m     infile\u001b[39m.\u001b[39mclose()\n\u001b[0;32m     23\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTry statement is finishied.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'infile' referenced before assignment"
      ]
     }
    ],
@@ -468,14 +481,132 @@
     "        infile = open(fileName, 'r')\n",
     "        num = float(infile.readline()) #읽어서 타입을 float로 바꾸고\n",
     "        print(1/num) #읽은 파일을 1/num을 해줘\n",
-    "    except FileNotFoundError as exc1:\n",
-    "        print(exc1)\n",
-    "    except TypeError as exc2: #file1.txt 안에 100 이 들어있는데 str을 넣으면....\n",
-    "        print(exc2)\n",
-    "    except ZeroDivisionError as exc3: #파일안의 숫자가 0이라면 0으로 나누게 되니 이에러가 나옴.\n",
-    "        print(exc3)\n",
-    "        \n",
+    "    # except FileNotFoundError as exc1:\n",
+    "    #     print(exc1)\n",
+    "    # except TypeError as exc2: #file1.txt 안에 100 이 들어있는데 str을 넣으면....\n",
+    "    #     print(exc2)\n",
+    "    # except ZeroDivisionError as exc3: #파일안의 숫자가 0이라면 0으로 나누게 되니 이에러가 나옴.\n",
+    "    #     print(exc3)\n",
+    "    \n",
+    "    except Exception as exc:\n",
+    "        print(f'{exc.__class__.__name__} is occured')\n",
+    "        print(exc)\n",
+    "    else:\n",
+    "        print('No error occured')\n",
+    "    finally:\n",
+    "        infile.close()\n",
+    "        print(\"Try statement is finishied.\")\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "elements = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "result = random.choice(elements)\n",
+    "result\n",
+    "\n",
+    "result = random.shuffle(elements)\n",
+    "\n",
+    "random.randint(1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bar: 5117 (0.05117)\n",
+      "Plum: 25012 (0.25012)\n",
+      "Bell: 4920 (0.0492)\n",
+      "Orange: 24861 (0.24861)\n",
+      "Cherries: 24976 (0.24976)\n",
+      "Melon: 15114 (0.15114)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def main():\n",
+    "    # for i in range(3):\n",
+    "    #     outcome = spinWheel()\n",
+    "    #     print(outcome, end=\"   \")\n",
+    "        \n",
+    "        \n",
+    "    num = 10000\n",
+    "    dict_cnt = {}\n",
+    "    for _ in range(num):\n",
+    "        outcome = spinWheel()\n",
+    "        dict_cnt[outcome] = dict_cnt.get(outcome, 0) +1\n",
+    "        \n",
+    "    for k, v in dict_cnt.items():\n",
+    "        print(f\"{k}: {v} ({v/num})\") #계속 돌리면 그 확률이 나올까?\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "#bell이 왜 제일 안나오는가?        \n",
+    "#if는 위에서부터 내려오잖아~~ return 하면 끝~\n",
+    "        \n",
+    "def spinWheel():\n",
+    "    n = random.randint(1,20)\n",
+    "    if n>15:\n",
+    "        return \"Cherries\" #25%\n",
+    "    elif n>10: #15>=n 이 숨어있는거지\n",
+    "        return \"Orange\" #25%\n",
+    "    elif n>5:\n",
+    "        return \"Plum\" #25%\n",
+    "    elif n>2:\n",
+    "        return \"Melon\" #15%\n",
+    "    elif n>1:\n",
+    "        return \"Bell\" #5%\n",
+    "    else:\n",
+    "        return \"Bar\" #5%\n",
+    "main()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8444218515250481"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#랜덤은 진짜 랜덤이냐? 아니다. seed. 슈도 랜덤 넘버 #같은값만 나온다.\n",
+    "import random\n",
+    "random.seed(0)\n",
+    "random.random()"
    ]
   }
  ],
